# GifRecorder

./: build.gradle
app/: build.gradle
app/src/main/myjni/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
